--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,9 @@
 # Server Port
 server.port=8080
 # Database Configuration
-spring.datasource.url=jdbc:mysql://mazora.railway.internal:3306/railway?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://mazora.railway.internal:3306/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://root:rYiQfGJWMcrVKtMQHQUaJLsKEJvTrtoO@mysql.railway.internal:3306/railway?useSSL=false&serverTimezone=UTC
+#mysql://root:rYiQfGJWMcrVKtMQHQUaJLsKEJvTrtoO@mysql.railway.internal:3306/railway
 #spring.datasource.url=jdbc:mysql://localhost:3306/ecommerceapp_mazora2?useSSL=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3306/ecommerceapp_mazora?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
