--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -31,3 +31,7 @@ logging.level.org.springframework.security=DEBUG
 file.upload-dir=uploads
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+app.upload.path=file:${user.dir}/uploads/
+
+
