--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -34,3 +34,4 @@ logging.level.org.springframework.security=DEBUG
 file.upload-dir=uploads
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+app.upload.path=file:${user.dir}/uploads/
