properties file updated for log

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -34,4 +34,14 @@ spring.servlet.multipart.max-request-size=5MB
 
 app.upload.path=file:${user.dir}/uploads/
 
+# === LOG LEVELS ===
+logging.level.root=INFO
+logging.level.com.mazora=DEBUG
 
+# === LOG FILE CONFIG ===
+logging.file.name=logs/mazora-backend.log
+# OR use logging.file.path=logs (generates spring.log)
+# logging.file.path=logs
+
+# === LOG FORMAT (Optional) ===
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level [%thread] %logger{36} - %msg%n
