--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://root:rYiQfGJWMcrVKtMQHQUaJLsKEJvTrtoO@mysql.r
 #spring.datasource.url=jdbc:mysql://localhost:3306/ecommerceapp_mazora?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=rYiQfGJWMcrVKtMQHQUaJLsKEJvTrtoO
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 # Hibernate Dialect (IMPORTANT for MySQL)
